...
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nama_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nama"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>
...
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>
...
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumber_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/phone_number"
            android:maxLength="16"
            android:inputType="phone"/>

...
        android:layout_margin="5dp"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:backgroundTint="#009688"
        android:padding="10dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_link"
        android:background="@android:color/transparent"
...
